fetch scripts and rearrange db and log files

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,1 @@
-main
-db/aldo.db
-
-# Include directories but not the files.
-log/*
-xml/*
-!xml/.gitkeep
-
-# Auto generated lists.
-list/categAll.list
-list/categUse.list
+aldowsc
