--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,7 @@
 
 [[constraint]]
   name = "github.com/douglasmg7/aldoutil"
-  version = "^0.2"
+  version = "0.3.0"
 
 [[constraint]]
   branch = "master"
