XML file with correct charset.
XML have the encoded change utf-8, so golang parse it correct.
Using sed to change the encoded to utf-8.
Script point to full path substitution-list.txt
Point to currency v0.1.0 instead master.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -30,8 +30,8 @@
   version = "0.3.0"
 
 [[constraint]]
-  branch = "master"
   name = "github.com/douglasmg7/currency"
+  version = "0.1.0"
 
 [[constraint]]
   name = "github.com/jmoiron/sqlx"
@@ -40,10 +40,6 @@
 [[constraint]]
   name = "github.com/mattn/go-sqlite3"
   version = "1.13.0"
-
-[[constraint]]
-  branch = "master"
-  name = "golang.org/x/net"
 
 [prune]
   go-tests = true
